Change name of Map to Game, and clean up